--- a/tensorflow-nlp-tutorial/02. Text Preprocessing/2-1. tokenization.ipynb
+++ b/tensorflow-nlp-tutorial/02. Text Preprocessing/2-1. tokenization.ipynb
@@ -1,12 +1,13 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "p6Qj3ZjBA5j7"
       },
       "source": [
-        "위키독스 딥 러닝을 이용한 자연어 처리 입문의 토큰화 튜토리얼입니다.  \n",
+        "위키독스 딥 러닝을 이용한 자연어 처리 입문의 토큰화 튜토리얼입니다.\n",
         "\n",
         "링크 : https://wikidocs.net/21698"
       ]
