--- a/tensorflow-nlp-tutorial/02. Text Preprocessing/2-4. remove_stopwords.ipynb
+++ b/tensorflow-nlp-tutorial/02. Text Preprocessing/2-4. remove_stopwords.ipynb
@@ -1,12 +1,13 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "NciNzSycQPOD"
       },
       "source": [
-        "이 자료는 위키독스 딥 러닝을 이용한 자연어 처리 입문의 불용어 튜토리얼 자료입니다."
+        "이 자료는 위키독스 딥 러닝을 이용한 자연어 처리 입문의 불용어 튜토리얼 자료입니다. "
       ]
     },
     {
